--- a/project/modules/logboard-views/app/views/index-start.html
+++ b/project/modules/logboard-views/app/views/index-start.html
@@ -7,7 +7,9 @@
     <meta name="description" content="logs-waggon 日志应用系统">
     <meta name="keywords" content="logs, big data">
     <meta name="author" content="yaoooo and Bootstrap contributors">
+
     <title>logs-waggon 日志应用系统</title>
+
     <link rel="stylesheet" href="../res/styles/css/bootstrap-4.0.0a3.css"/>
     <link rel="stylesheet" href="../res/styles/css/leaflet-1.0.0rc3.css"/>
     <link rel="stylesheet" href="../res/fonts/css/font-awesome.css">
@@ -53,10 +55,11 @@
     </div>
 
 </div>
+
 <!--/首屏轮播-->
 
 <!--系统概览模块-->
-<div id="logsOverview" class="container-fluid ">
+<div id="logsOverview" class="container-fluid screen-page ">
 
     <div id="apps_general" class="row _divider_stripe">
         <div class="col-sm-4 ">
