--- a/project/modules/logboard-views/app/res/styles/general.css
+++ b/project/modules/logboard-views/app/res/styles/general.css
@@ -35,6 +35,10 @@ body, button, input, select, textarea, h1, h2, h3, h4, h5, h6 {
 
 }
 
+._width100 {
+    width: 100%;
+}
+
 /* divider_rs */
 .divider_white1 {
     height: 10px;
@@ -102,3 +106,9 @@ body, button, input, select, textarea, h1, h2, h3, h4, h5, h6 {
     margin-left: auto;
     margin-right: auto;
 }
+
+.bg_blue_svg {
+    background:  #14a7df url(../../images/bkgd-light-blue.svg) no-repeat center center;
+    background-size: cover;
+}
+
