--- a/project/modules/logboard-views/app/res/styles/colors.css
+++ b/project/modules/logboard-views/app/res/styles/colors.css
@@ -1,15 +1,27 @@
-.bg_dark{
+.bg_dark {
     background-color: #212121;
 }
-.bg_gray_general{
+
+.bg_gray_general {
     background-color: #777;
 }
+
 .bg_gray_shallow {
     background-color: #f0f0f0
 }
+
 .bg_gray_barely {
     background-color: #fafafa
 }
-.bg_white_pure{
+
+.bg_white_pure {
     background-color: #ffffff
+}
+
+.color_white_100 {
+    color: #ffffff;
+}
+
+.transparent_bg{
+    background-color: transparent;
 }
