--- a/project/modules/logboard-views/app/res/styles/colors.css
+++ b/project/modules/logboard-views/app/res/styles/colors.css
@@ -22,6 +22,10 @@
     color: #ffffff;
 }
 
-.transparent_bg{
+.color_gray_shallow {
+    color: #f1f1f1;
+}
+
+.transparent_bg {
     background-color: transparent;
 }
