--- a/project/modules/logboard-views/app/views/bak/index-start-0.1.0-exp-list.html
+++ b/project/modules/logboard-views/app/views/bak/index-start-0.1.0-exp-list.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="logs, big data">
     <meta name="author" content="yaoooo and Bootstrap contributors">
     <title>logboard 日志应用系统</title>
-    <link rel="stylesheet" href="../res/styles/css/bootstrap-4.0.0a3.css"/>
-    <link rel="stylesheet" href="../res/styles/css/leaflet-1.0.0rc3.css"/>
-    <link rel="stylesheet" href="../res/fonts/css/font-awesome.css">
-    <link rel="stylesheet" href="../res/styles/general.css"/>
-    <link rel="stylesheet" href="../res/styles/colors.css"/>
-    <link rel="stylesheet" href="../res/styles/svg.css"/>
+    <link rel="stylesheet" href="../../res/styles/css/bootstrap-4.0.0a3.css"/>
+    <link rel="stylesheet" href="../../res/styles/css/leaflet-1.0.0rc3.css"/>
+    <link rel="stylesheet" href="../../res/fonts/css/font-awesome.css">
+    <link rel="stylesheet" href="../../res/styles/general.css"/>
+    <link rel="stylesheet" href="../../res/styles/colors.css"/>
+    <link rel="stylesheet" href="../../res/styles/svg.css"/>
 </head>
 
 <body>
@@ -62,31 +62,32 @@
 
 <!--首屏简介模块-->
 <div id="logsTop" class="container-fluid screen-page ">
-
+    <!--3大快速入口-->
     <div class="row _text_align_center divider_white40 bg_blue_svg ">
         <div class="col-sm-4 ">
             <div style="margin-top: 25%">
-                <img class="top-icon" src="../images/top-search.svg" alt="日志搜索">
-                <div class="row divider_white2 "></div>
+                <img class="top-icon" src="../../images/top-search.svg" alt="日志搜索">
+                <div class="row divider_white3 "></div>
                 <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志搜索</button>
             </div>
         </div>
         <div class="col-sm-4 ">
             <div style="margin-top: 25%">
-                <img class="top-icon" src="../images/top-monitor.svg" alt="日志监控">
-                <div class="row divider_white2 "></div>
+                <img class="top-icon" src="../../images/top-monitor.svg" alt="日志监控">
+                <div class="row divider_white3 "></div>
                 <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志监控</button>
             </div>
         </div>
         <div class="col-sm-4 ">
             <div style="margin-top: 25%">
-                <img class="top-icon" src="../images/top-stats.svg" alt="日志统计">
-                <div class="row divider_white2 "></div>
+                <img class="top-icon" src="../../images/top-stats.svg" alt="日志统计">
+                <div class="row divider_white3 "></div>
                 <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志统计</button>
             </div>
         </div>
     </div>
 
+    <!--简单数量统计-->
     <div id="apps_general1" class="row _divider_stripe">
         <div class="col-sm-4 ">
             <div style="margin-top: 10%">
@@ -115,52 +116,42 @@
 <!--/首屏简介模块-->
 
 <!--系统概览模块-->
-<div id="logsOverview" class="container-fluid screen-page ">
-<a name="aLogsOverview"></a>
-    <div id="apps_general" class="row _divider_stripe">
-        <div class="col-sm-4 ">
-            <div style="margin-top: 10%">
-                <i class="fa fa-cubes fa-2x"></i>
-                <div class="stats_count_number">12</div>
-                <div class="stats_count_desc">接入应用数</div>
+<div id="logsOverview" class="container-fluid screen-page  ">
+    <a name="aLogsOverview"></a>
+    <div class="row  _height100 _text_align_center margin-top3 ">
+        <!--日志饼状图-->
+        <div class="col-sm-3 ">
+            <div class="row">
+                <svg id="svgExpStatsPie" width="200" height="200"></svg>
+            </div>
+            <div class="divider_white1"></div>
+            <div class="row">
+                <svg id="svgExpStatsLegend" width="210" height="200"></svg>
             </div>
         </div>
-        <div class="col-sm-4 ">
-            <div style="margin-top: 10%">
-                <i class="fa fa-th fa-2x"></i>
-                <div class="stats_count_number">12306</div>
-                <div class="stats_count_desc">日志记录数</div>
-            </div>
-        </div>
-        <div class="col-sm-4 ">
-            <div style="margin-top: 10%">
-                <i class="fa fa-clock-o fa-2x"></i>
-                <div class="stats_count_number">488 小时</div>
-                <div class="stats_count_desc">运行总时间</div>
-            </div>
-        </div>
-    </div>
-    <div class="row divider_white3 bg_white_pure"></div>
-
-    <div id="logsCurveHeader" class="row bg_white_pure ">
-        <div class="col-sm-4 _text_align_center">
-        </div>
-        <div class="col-sm-4 _text_align_center">
-            <span class="h3">日志实时处理量变化曲线</span>
-        </div>
-        <div class="col-sm-4 _text_align_right">
+        <!--日志曲线图-->
+        <div class="col-sm-9">
+            <div id="logsCurveHeader" class="row bg_white_pure ">
+                <div class="col-sm-3 _text_align_center">
+                </div>
+                <div class="col-sm-4 _text_align_center">
+                    <span class="h4">日志实时处理量变化曲线</span>
+                </div>
+                <div class="col-sm-5 _text_align_right">
 <span class="align_right ">
-<a id="a1" href="javascript:void(0)" class="btn btn-info">近1小时</a>
-<a id="a2" href="javascript:void(0)" class="btn text-muted">24小时</a>
-<a id="a3" href="javascript:void(0)" class="btn text-muted">昨天</a>
-<a id="a4" href="javascript:void(0)" class="btn text-muted">7天</a>
-<a id="a5" href="javascript:void(0)" class="btn text-muted">本月</a>
+<a id="a1" href="javascript:void(0)" class="btn btn-info _width15">1小时</a>
+<a id="a2" href="javascript:void(0)" class="btn text-muted _width15">24小时</a>
+<a id="a3" href="javascript:void(0)" class="btn text-muted _width15">昨天</a>
+<a id="a4" href="javascript:void(0)" class="btn text-muted _width15">7天</a>
+<a id="a5" href="javascript:void(0)" class="btn text-muted _width15">本月</a>
 </span></div>
-
-    </div>
-    <div id="logsGeneralCurve" class="row bg_white_pure">
-        <div class="col-sm-12 _text_align_center">
-            <svg id="svgLogsGenaral" width="1080" height="380"></svg>
+            </div>
+            <div class="divider_white2"></div>
+            <div id="logsGeneralCurve" class="row bg_white_pure">
+                <div class="col-sm-12 _text_align_center">
+                    <svg id="svgLogsGenaral" width="960" height="400"></svg>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -172,6 +163,7 @@
 <div id="logsException" class="container-fluid screen-page bg_gray_barely ">
     <a name="aLogsException"></a>
     <div class="row divider_white3"></div>
+    <!--曲线图标题部分-->
     <div id="expLogsHeader" class="row divider_white4 ">
         <div class="col-sm-4 _text_align_center">
         </div>
@@ -188,66 +180,52 @@
     </span>
         </div>
     </div>
+    <!--异常曲线-->
     <div id="expLogsCurve" class="row ">
         <div class="col-sm-12 _text_align_center">
             <svg id="svgLogsExp" width="1080" height="330"></svg>
-
         </div>
     </div>
-    <div id="expDetails" class="row ">
-        <div class="col-sm-3  divider_white25  _text_align_right">
-            <svg id="svgExpStatsLegend" width="210" height="200"></svg>
+
+    <!--异常消息列表-->
+    <div id="expDetails" class=" row ">
+        <div class="col-sm-1  _text_align_center _to_top30 ">
+            <i class="fa  fa-angle-left fa-4x  color_gray_shallow" ></i>
         </div>
-        <div class="col-sm-3 divider_white25 _text_align_center  ">
-            <svg id="svgExpStatsPie" width="230" height="230"></svg>
-        </div>
-        <div class="col-sm-6">
+
+        <div class="col-sm-10  ">
             <div class="row _text_align_center">
-                <div class="col-sm-2 h5">异常时间</div>
-                <div class="col-sm-8 h5">异常描述</div>
-                <div class="col-sm-2 h5">处理状态</div>
+                <div class="col-sm-1 h6">ID</div>
+                <div class="col-sm-1 h6">时间</div>
+                <div class="col-sm-1 h6">来源</div>
+                <div class="col-sm-8 h6">摘要</div>
+                <div class="col-sm-1 h6">状态</div>
             </div>
-            <div class="row h_line"></div>
-
+            <!--<div class="row h_line"></div>-->
             <div class="row">
-                <ul class="list-group">
+                <div class="card _no_border">
+                    <ul class="list-group list-group-flush ">
+                        <li class="list-group-item _no_border">Cras justo odio</li>
+                    </ul>
+                </div>
+                <div class="card _no_border">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Cras justo odio</li>
+                    </ul>
+                </div>
+                <div class="card _no_border">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Cras justo odio</li>
+                    </ul>
+                </div>
 
-                    <a class="list-group-item">
-                        <span class="label label-default label-pill">08/01 14:42</span>
-                        <div class="bmd-list-group-col">
-                            <p class="list-group-item-heading">app1二维地图 错误 的日志</p>
-                            <p class="list-group-item-text">org.springframework.beans.factory.BeanCreationException:
-                                Error </p>
-                        </div>
-                        <span class="label label-default label-pill pull-xs-right">待处理</span>
-                    </a>
-
-                    <a class="list-group-item">
-                        <span class="label label-default label-pill">07/29 12:42</span>
-                        <div class="bmd-list-group-col">
-                            <p class="list-group-item-heading">app3KPI网站 错误 的日志</p>
-                            <p class="list-group-item-text">org.springframework.beans.factory.BeanCreationException:
-                                Error </p>
-
-                        </div>
-                        <span class="label label-default label-pill pull-xs-right">刘仕伟</span>
-                    </a>
-
-                    <a class="list-group-item">
-                        <span class="label label-default label-pill">07/27 10:42</span>
-                        <div class="bmd-list-group-col">
-                            <p class="list-group-item-heading">app1二维地图 错误 的日志</p>
-                            <p class="list-group-item-text">org.springframework.beans.factory.BeanCreationException:
-                                Error </p>
-
-                        </div>
-                        <span class="label label-default label-pill pull-xs-right">张敏</span>
-                    </a>
-
-                </ul>
             </div>
+
         </div>
 
+        <div class="col-sm-1  _text_align_center _to_top30 ">
+            <i class="fa  fa-angle-right fa-4x  color_gray_shallow" ></i>
+        </div>
     </div>
 </div>
 <!--/异常监控模块-->
@@ -354,14 +332,14 @@
 <!--/末尾页脚-->
 
 <!-- jQuery first, optional tether for tooltips, then Bootstrap JS. -->
-<script type="text/javascript" src="../res/scripts/js/jquery-3.1.0.js"></script>
-<script type="text/javascript" src="../res/scripts/js/tether-1.3.2.min.js"></script>
-<script type="text/javascript" src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>
-<script type="text/javascript" src="../res/scripts/js/holder-2.6.0.min.js"></script>
-<script type="text/javascript" src="../res/scripts/js/d3-4.1.1.js"></script>
-<script type="text/javascript" src="../res/scripts/js/leaflet-1.0.0rc3.js"></script>
-<script type="text/javascript" src="../res/scripts/svg.js"></script>
-<script type="text/javascript" src="../res/scripts/scripts.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/jquery-3.1.0.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/tether-1.3.2.min.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/bootstrap-4.0.0a3.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/holder-2.6.0.min.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/d3-4.1.1.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/leaflet-1.0.0rc3.js"></script>
+<script type="text/javascript" src="../../res/scripts/svg.js"></script>
+<script type="text/javascript" src="../../res/scripts/scripts.js"></script>
 
 <script type="text/javascript">
 
