--- a/project/modules/logboard-views/app/views/index-start.html
+++ b/project/modules/logboard-views/app/views/index-start.html
@@ -4,64 +4,91 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="logs-waggon 日志应用系统">
+    <meta name="description" content="logboard 日志应用系统">
     <meta name="keywords" content="logs, big data">
     <meta name="author" content="yaoooo and Bootstrap contributors">
-
-    <title>logs-waggon 日志应用系统</title>
-
+    <title>logboard 日志应用系统</title>
     <link rel="stylesheet" href="../res/styles/css/bootstrap-4.0.0a3.css"/>
     <link rel="stylesheet" href="../res/styles/css/leaflet-1.0.0rc3.css"/>
     <link rel="stylesheet" href="../res/fonts/css/font-awesome.css">
     <link rel="stylesheet" href="../res/styles/general.css"/>
     <link rel="stylesheet" href="../res/styles/colors.css"/>
     <link rel="stylesheet" href="../res/styles/svg.css"/>
-
 </head>
 
 <body>
 
-<!--首屏轮播-->
-<div id="firstSlider" class="screen-page">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-                <img data-src="holder.js/1360x650/auto/#777:#ffffff/text:系统概览" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img data-src="holder.js/1360x650/auto/#666:#ffffff/text:异常监控" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img data-src="holder.js/1360x650/auto/#555:#ffffff/text:日志统计" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-                <img data-src="holder.js/1360x650/auto/#444:#ffffff/text:用户挖掘" alt="Third slide">
-            </div>
+<!-- Fixed navbar 顶部导航栏-->
+<div class="pos-f-t">
+    <div class="collapse" id="navbar-header">
+        <div class="container bg-inverse p-1">
+            <h3>Collapsed content</h3>
+            <p>Toggleable via the navbar brand.</p>
         </div>
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="icon-prev" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="icon-next" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
 
+    <nav class="navbar navbar-light navbar-static-top bg_white_pure ">
+        <div class="container">
+            <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse"
+                    data-target="#exCollapsingNavbar2" aria-expanded="false" aria-controls="exCollapsingNavbar2"
+                    aria-label="Toggle navigation"></button>
+            <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+                <a class="navbar-brand" href="#">LogBoard 日志公告牌 </a>
+                <ul class="nav navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#aLogsOverview">日志概览 <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#aLogsException">异常监控</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#aLogsStats">日志统计</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#aLogsBehavior">日志挖掘</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">关于</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </div>
 
-<!--/首屏轮播-->
+<!--顶部导航栏高度站位符-->
+<div class="divider_white6  "></div>
+<!--/顶部导航栏高度站位符-->
 
-<!--系统概览模块-->
-<div id="logsOverview" class="container-fluid screen-page ">
+<!--首屏简介模块-->
+<div id="logsTop" class="container-fluid screen-page ">
+    <!--3大快速入口-->
+    <div class="row _text_align_center divider_white40 bg_blue_svg ">
+        <div class="col-sm-4 ">
+            <div style="margin-top: 25%">
+                <img class="top-icon" src="../images/top-search.svg" alt="日志搜索">
+                <div class="row divider_white3 "></div>
+                <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志搜索</button>
+            </div>
+        </div>
+        <div class="col-sm-4 ">
+            <div style="margin-top: 25%">
+                <img class="top-icon" src="../images/top-monitor.svg" alt="日志监控">
+                <div class="row divider_white3 "></div>
+                <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志监控</button>
+            </div>
+        </div>
+        <div class="col-sm-4 ">
+            <div style="margin-top: 25%">
+                <img class="top-icon" src="../images/top-stats.svg" alt="日志统计">
+                <div class="row divider_white3 "></div>
+                <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志统计</button>
+            </div>
+        </div>
+    </div>
 
-    <div id="apps_general" class="row _divider_stripe">
+    <!--简单数量统计-->
+    <div id="apps_general1" class="row _divider_stripe">
         <div class="col-sm-4 ">
             <div style="margin-top: 10%">
                 <i class="fa fa-cubes fa-2x"></i>
@@ -69,6 +96,7 @@
                 <div class="stats_count_desc">接入应用数</div>
             </div>
         </div>
+
         <div class="col-sm-4 ">
             <div style="margin-top: 10%">
                 <i class="fa fa-th fa-2x"></i>
@@ -80,40 +108,62 @@
             <div style="margin-top: 10%">
                 <i class="fa fa-clock-o fa-2x"></i>
                 <div class="stats_count_number">488 小时</div>
-                <div class="stats_count_desc">运行总时间</div>
+                <div class="stats_count_desc">监控总时间</div>
             </div>
         </div>
     </div>
-    <div class="row divider_white3 bg_white_pure"></div>
+</div>
+<!--/首屏简介模块-->
 
-    <div id="logsCurveHeader" class="row bg_white_pure ">
-        <div class="col-sm-4 _text_align_center">
+<!--系统概览模块-->
+<div id="logsOverview" class="container-fluid screen-page  ">
+    <a name="aLogsOverview"></a>
+    <div class="row  _height100 _text_align_center margin-top3 ">
+        <!--日志饼状图-->
+        <div class="col-sm-3 ">
+            <div class="row">
+                <svg id="svgExpStatsPie" width="200" height="200"></svg>
+            </div>
+            <div class="divider_white1"></div>
+            <div class="row">
+                <svg id="svgExpStatsLegend" width="210" height="200"></svg>
+            </div>
         </div>
-        <div class="col-sm-4 _text_align_center">
-            <span class="h3">日志实时处理量变化曲线</span>
-        </div>
-        <div class="col-sm-4 _text_align_right">
-   <span class="align_right ">
-            <a id="a1" href="javascript:void(0)" class="btn btn-info">近1小时</a>
-            <a id="a2" href="javascript:void(0)" class="btn text-muted">24小时</a>
-            <a id="a3" href="javascript:void(0)" class="btn text-muted">昨天</a>
-            <a id="a4" href="javascript:void(0)" class="btn text-muted">7天</a>
-            <a id="a5" href="javascript:void(0)" class="btn text-muted">本月</a>
-        </span></div>
-
-    </div>
-    <div id="logsGeneralCurve" class="row bg_white_pure">
-        <div class="col-sm-12 _text_align_center">
-            <svg id="svgLogsGenaral" width="1080" height="380"></svg>
+        <!--日志曲线图-->
+        <div class="col-sm-9">
+            <div id="logsCurveHeader" class="row bg_white_pure ">
+                <div class="col-sm-3 _text_align_center">
+                </div>
+                <div class="col-sm-4 _text_align_center">
+                    <span class="h4">日志实时处理量变化曲线</span>
+                </div>
+                <div class="col-sm-5 _text_align_right">
+<span class="align_right ">
+<a id="a1" href="javascript:void(0)" class="btn btn-info _width15">1小时</a>
+<a id="a2" href="javascript:void(0)" class="btn text-muted _width15">24小时</a>
+<a id="a3" href="javascript:void(0)" class="btn text-muted _width15">昨天</a>
+<a id="a4" href="javascript:void(0)" class="btn text-muted _width15">7天</a>
+<a id="a5" href="javascript:void(0)" class="btn text-muted _width15">本月</a>
+</span></div>
+            </div>
+            <div class="divider_white2"></div>
+            <div id="logsGeneralCurve" class="row bg_white_pure">
+                <div class="col-sm-12 _text_align_center">
+                    <svg id="svgLogsGenaral" width="960" height="400"></svg>
+                </div>
+            </div>
         </div>
     </div>
 
 </div>
 <!--/系统概览模块-->
 
+
 <!--异常监控模块-->
 <div id="logsException" class="container-fluid screen-page bg_gray_barely ">
+    <a name="aLogsException"></a>
     <div class="row divider_white3"></div>
+    <!--曲线图标题部分-->
     <div id="expLogsHeader" class="row divider_white4 ">
         <div class="col-sm-4 _text_align_center">
         </div>
@@ -121,81 +171,137 @@
             <span class="h3">异常日志监控</span>
         </div>
         <div class="col-sm-4 _text_align_right">
-            <span class="align_right ">
-                <a id="a01" href="javascript:void(0)" class="btn btn-info">近1小时</a>
-                <a id="a02" href="javascript:void(0)" class="btn text-muted ">24小时</a>
-                <a id="a03" href="javascript:void(0)" class="btn text-muted">昨天</a>
-                <a id="a04" href="javascript:void(0)" class="btn text-muted">7天</a>
-                <a id="a05" href="javascript:void(0)" class="btn text-muted">本月</a>
-            </span>
+    <span class="align_right ">
+    <a id="a01" href="javascript:void(0)" class="btn btn-info">近1小时</a>
+    <a id="a02" href="javascript:void(0)" class="btn text-muted ">24小时</a>
+    <a id="a03" href="javascript:void(0)" class="btn text-muted">昨天</a>
+    <a id="a04" href="javascript:void(0)" class="btn text-muted">7天</a>
+    <a id="a05" href="javascript:void(0)" class="btn text-muted">本月</a>
+    </span>
         </div>
     </div>
+    <!--异常曲线-->
     <div id="expLogsCurve" class="row ">
         <div class="col-sm-12 _text_align_center">
             <svg id="svgLogsExp" width="1080" height="330"></svg>
-
         </div>
     </div>
-    <div id="expDetails" class="row ">
-        <div class="col-sm-3  divider_white25  _text_align_right">
-            <svg id="svgExpStatsLegend" width="210" height="200"></svg>
+
+    <!--异常消息列表-->
+    <div id="expDetails" class=" row ">
+
+        <div class="col-sm-1  _text_align_center _to_top30 ">
+            <i class="fa  fa-angle-left fa-4x  color_gray_shallow"></i>
         </div>
-        <div class="col-sm-3 divider_white25 _text_align_center  ">
-            <svg id="svgExpStatsPie" width="230" height="230"></svg>
-        </div>
-        <div class="col-sm-6">
-            <div class="row _text_align_center">
-                <div class="col-sm-2 h5">异常时间</div>
-                <div class="col-sm-8 h5">异常描述</div>
-                <div class="col-sm-2 h5">处理状态</div>
+
+        <div class="col-sm-10  ">
+
+            <div class="row " >
+
+                <div class="col-sm-4 _width100">
+                    <div id="expCard01" class="card exp_card  ">
+                        <!--<img class="card-i2mg-top" src="..." alt="Card image cap">-->
+                        <div class="card-block exp_item_padding ">
+                            <h4 class="card-title exp_card_title_size">app1二维地图</h4>
+                            <p class="card-text exp_card_text_size">Utils: Uncaught exception in thread SparkListenerBus
+                                java.lang.InterruptedException at java.util.concurrent.locks...
+                            </p>
+                        </div>
+                        <ul class="list-group list-group-flush exp_card_item_size ">
+                            <li class="list-group-item exp_item_padding">2016-11-08 23:32:06</li>
+                            <li class="list-group-item exp_item_padding">com.hgt.App 163</li>
+                        </ul>
+                        <div class="card-block exp_contents_padding ">
+                            <div class="_float_left">
+                                <a href="#" class="card-link exp_card_text_size">查看详情</a>
+
+                            </div>
+                            <div class="_float_right">
+                                <span class="tag tag-danger tag-pill float-xs-right exp_card_item_size">严重</span>
+
+                            </div>
+
+                            <!--<span class="_text_align_right ">严重</span>-->
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-4 _width30">
+                    <div id="expCard02" class="card exp_card  ">
+                        <!--<img class="card-i2mg-top" src="..." alt="Card image cap">-->
+                        <div class="card-block exp_item_padding ">
+                            <h4 class="card-title exp_card_title_size">app1二维地图</h4>
+                            <p class="card-text exp_card_text_size">Utils: Uncaught exception in thread SparkListenerBus
+                                java.lang.InterruptedException at java.util.concurrent.locks...
+                            </p>
+                        </div>
+                        <ul class="list-group list-group-flush exp_card_item_size ">
+                            <li class="list-group-item exp_item_padding">2016-11-08 23:32:06</li>
+                            <li class="list-group-item exp_item_padding">com.hgt.App 163</li>
+                        </ul>
+                        <div class="card-block exp_contents_padding ">
+                            <div class="_float_left">
+                                <a href="#" class="card-link exp_card_text_size">查看详情</a>
+
+                            </div>
+                            <div class="_float_right">
+                                <span class="tag tag-warning tag-pill float-xs-right exp_card_item_size">严重</span>
+
+                            </div>
+
+                            <!--<span class="_text_align_right ">严重</span>-->
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="col-sm-4 _width30">
+                    <div id="expCard03" class="card exp_card  ">
+                        <!--<img class="card-i2mg-top" src="..." alt="Card image cap">-->
+                        <div class="card-block exp_item_padding ">
+                            <h4 class="card-title exp_card_title_size">app1二维地图</h4>
+                            <p class="card-text exp_card_text_size">Utils: Uncaught exception in thread SparkListenerBus
+                                java.lang.InterruptedException at java.util.concurrent.locks...
+                            </p>
+                        </div>
+                        <ul class="list-group list-group-flush exp_card_item_size ">
+                            <li class="list-group-item exp_item_padding">2016-11-08 23:32:06</li>
+                            <li class="list-group-item exp_item_padding">com.hgt.App 163</li>
+                        </ul>
+                        <div class="card-block exp_contents_padding ">
+                            <div class="_float_left">
+                                <a href="#" class="card-link exp_card_text_size">查看详情</a>
+
+                            </div>
+                            <div class="_float_right">
+                                <span class="tag tag-danger tag-pill float-xs-right exp_card_item_size">严重</span>
+
+                            </div>
+
+                            <!--<span class="_text_align_right ">严重</span>-->
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
-            <div class="row h_line"></div>
 
-            <div class="row">
-                <ul class="list-group">
 
-                    <a class="list-group-item">
-                        <span class="label label-default label-pill">08/01 14:42</span>
-                        <div class="bmd-list-group-col">
-                            <p class="list-group-item-heading">app1二维地图 错误 的日志</p>
-                            <p class="list-group-item-text">org.springframework.beans.factory.BeanCreationException:
-                                Error </p>
-                        </div>
-                        <span class="label label-default label-pill pull-xs-right">待处理</span>
-                    </a>
-
-                    <a class="list-group-item">
-                        <span class="label label-default label-pill">07/29 12:42</span>
-                        <div class="bmd-list-group-col">
-                            <p class="list-group-item-heading">app3KPI网站 错误 的日志</p>
-                            <p class="list-group-item-text">org.springframework.beans.factory.BeanCreationException:
-                                Error </p>
-
-                        </div>
-                        <span class="label label-default label-pill pull-xs-right">刘仕伟</span>
-                    </a>
-
-                    <a class="list-group-item">
-                        <span class="label label-default label-pill">07/27 10:42</span>
-                        <div class="bmd-list-group-col">
-                            <p class="list-group-item-heading">app1二维地图 错误 的日志</p>
-                            <p class="list-group-item-text">org.springframework.beans.factory.BeanCreationException:
-                                Error </p>
-
-                        </div>
-                        <span class="label label-default label-pill pull-xs-right">张敏</span>
-                    </a>
-
-                </ul>
-            </div>
         </div>
 
+        <div class="col-sm-1  _text_align_center _to_top30 ">
+            <i class="fa  fa-angle-right fa-4x  color_gray_shallow"></i>
+        </div>
     </div>
 </div>
 <!--/异常监控模块-->
 
+
 <!--日志统计模块-->
-<div id="logsStats" class="container-fluid  bg_gray_shallow screen-page _text_align_center">
+<div id="logsStats" class="container-fluid  screen-page bg_gray_shallow _text_align_center">
+    <a name="aLogsStats"></a>
     <div class="row divider_white3"></div>
     <h2>日志统计</h2>
     <div>
@@ -206,6 +312,7 @@
 
 <!--用户挖掘模块-->
 <div id="logsBehavior" class="container-fluid screen-page">
+    <a name="aLogsBehavior"></a>
     <div class="row divider_white3"></div>
     <div class="row ">
 
@@ -258,7 +365,9 @@
 <!--/用户挖掘模块-->
 
 <!--末尾页脚-->
-<div id="lastFooter" class="container-fluid _divider_stripe bg_gray_">
+
+<div id="lastFooter" class="container-fluid _divider_stripe bg_gray_shallow">
+    <a name="about"></a>
     <div class="row divider_white4"></div>
     <div class="row _text_align_center">
         <div class="col-sm-12">
@@ -287,7 +396,6 @@
         <div class="col-sm-6 _text_align_left">
             <span style="padding-left: 15px">helloworld@qq.com</span></div>
     </div>
-
 </div>
 <!--/末尾页脚-->
 
