--- a/project/modules/logboard-views/app/views/bak/index-start-161113-bootstrap4.html
+++ b/project/modules/logboard-views/app/views/bak/index-start-161113-bootstrap4.html
@@ -8,9 +8,8 @@
     <meta name="keywords" content="logs, big data">
     <meta name="author" content="yaoooo and Bootstrap contributors">
     <title>logboard 日志应用系统</title>
-    <!--<link rel="stylesheet" href="../res/styles/css/bootstrap-4.0.0a3.css"/>-->
-    <link rel="stylesheet" href="../res/styles/css/bootstrap-3.3.7.css"/>
-    <!--<link rel="stylesheet" href="../res/styles/css/leaflet-1.0.0rc3.css"/>-->
+    <link rel="stylesheet" href="../res/styles/css/bootstrap-4.0.0a3.css"/>
+    <link rel="stylesheet" href="../res/styles/css/leaflet-1.0.0rc3.css"/>
     <link rel="stylesheet" href="../res/fonts/css/font-awesome.css">
     <link rel="stylesheet" href="../res/styles/general.css"/>
     <link rel="stylesheet" href="../res/styles/colors.css"/>
@@ -407,13 +406,13 @@
 <!-- jQuery first, optional tether for tooltips, then Bootstrap JS. -->
 <script type="text/javascript" src="../res/scripts/js/jquery-3.1.0.js"></script>
 <script type="text/javascript" src="../res/scripts/js/tether-1.3.2.min.js"></script>
-<!--<script type="text/javascript" src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>-->
-<script type="text/javascript" src="../res/scripts/js/bootstrap-3.3.7.js"></script>
+<script type="text/javascript" src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>
 <script type="text/javascript" src="../res/scripts/js/holder-2.6.0.min.js"></script>
 <script type="text/javascript" src="../res/scripts/js/d3-4.1.1.js"></script>
-<!--<script type="text/javascript" src="../res/scripts/js/leaflet-1.0.0rc3.js"></script>-->
+<script type="text/javascript" src="../res/scripts/js/leaflet-1.0.0rc3.js"></script>
 <script type="text/javascript" src="../res/scripts/svg.js"></script>
 <script type="text/javascript" src="../res/scripts/scripts.js"></script>
+
 <script type="text/javascript">
 
 </script>
