--- a/project/modules/logboard-views/app/views/logs-search.html
+++ b/project/modules/logboard-views/app/views/logs-search.html
@@ -8,8 +8,8 @@
     <meta name="author" content="yaoooo">
     <link rel="icon" href="../res/images/favicon.ico">
     <title>日志搜索页 logs search</title>
-    <link href="../res/styles/css/bootstrap-4.0.0a3.css" rel="stylesheet">
-    <link href="../res/styles/general.css" rel="stylesheet">
+    <link href="../../res/styles/css/bootstrap-4.0.0a3.css" rel="stylesheet">
+    <link href="../../res/styles/general.css" rel="stylesheet">
     <!--<link href="styles/css/bootstrap-4.0.0a3.min.css" rel="stylesheet">-->
 </head>
 
@@ -49,9 +49,6 @@
     </div>
 
 
-
-
-
 </div>
 
 <footer class="footer">
@@ -63,10 +60,10 @@
     </div>
 </footer>
 
-<script src="../res/scripts/js/jquery-3.1.0.js"></script>
-<script src="../res/scripts/js/holder-2.6.0.min.js"></script>
-<script src="../res/scripts/js/tether-1.3.2.min.js"></script>
-<script src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>
+<script src="../../res/scripts/js/jquery-3.1.0.js"></script>
+<script src="../../res/scripts/js/holder-2.6.0.min.js"></script>
+<script src="../../res/scripts/js/tether-1.3.2.min.js"></script>
+<script src="../../res/scripts/js/bootstrap-4.0.0a3.js"></script>
 <!--<script src="../res/scripts/js/d3-4.2.1.js"></script>-->
 <!--<script src="scripts/js/jquery-3.1.0.min.js"></script>-->
 <!--<script src="scripts/js/bootstrap-4.0.0a3.min.js"></script>-->
