--- a/project/modules/logboard-views/app/views/page-template.html
+++ b/project/modules/logboard-views/app/views/page-template.html
@@ -6,73 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="leaflet demos">
     <meta name="author" content="yaoooo">
-    <link rel="icon" href="../res/images/favicon.ico">
+    <link rel="icon" href="../favicon.ico">
     <title> title here 标题</title>
-    <link href="../res/styles/css/bootstrap-4.0.0a3.css" rel="stylesheet">
-    <link href="../res/styles/general.css" rel="stylesheet">
+    <!--<link href="../res/styles/css/bootstrap-4.0.0a3.css" rel="stylesheet">-->
+    <link href="../res/styles/css/bootstrap-3.3.7.css" rel="stylesheet">
+    <!--<link href="../res/styles/general.css" rel="stylesheet">-->
+    <link href="../res/styles/layout.css" rel="stylesheet">
     <!--<link href="styles/css/bootstrap-4.0.0a3.min.css" rel="stylesheet">-->
 </head>
 
 <body>
+
+
 <!-- Fixed navbar -->
-<div class="pos-f-t">
-    <div class="collapse" id="navbar-header">
-        <div class="container bg-inverse p-a-1">
-            <h3>Collapsed content</h3>
-            <p>Toggleable via the navbar brand.</p>
-        </div>
-    </div>
-    <nav class="navbar navbar-light navbar-static-top bg-faded">
-        <div class="container">
-            <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse"
-                    data-target="#exCollapsingNavbar2">
-                &#9776;
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
-            <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-                <a class="navbar-brand" href="#">D3</a>
-                <ul class="nav navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">学习路线树形图<span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
-            </div>
+            <a class="navbar-brand" href="#">Project name</a>
         </div>
-    </nav>
-</div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
 
 <!-- Begin page content -->
 <div class="container">
-
-    <h2 class="title1">学习路线 Roadmap</h2>
-    <div id="contents" class="container">
-
+    <div class="page-header">
+        <h1>Sticky footer with fixed navbar</h1>
     </div>
-
-
-
-    <br/>
-    <br/>
-    <h5>Open sample in a new windows</h5>
-
-    <code id="srcCode">
-        code here
-    </code>
-
+    <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body &gt; .container</code>.</p>
 </div>
 
 <footer class="footer">
     <div class="container">
-        <span>
-            <a href="https://github.com/uptonking/blog-leaflet/index.html">本页面</a> is maintained by <a
-                href="https://github.com/uptonking">yaoooo</a>.
-        </span>
+        <p class="text-muted">Place sticky footer content here.</p>
     </div>
 </footer>
+
+
 
 <script src="../res/scripts/js/jquery-3.1.0.js"></script>
 <script src="../res/scripts/js/holder-2.6.0.min.js"></script>
 <script src="../res/scripts/js/tether-1.3.2.min.js"></script>
-<script src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>
+<!--<script src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>-->
+<script src="../res/scripts/js/bootstrap-3.3.7.js"></script>
 <!--<script src="../res/scripts/js/d3-4.2.1.js"></script>-->
 <!--<script src="scripts/js/jquery-3.1.0.min.js"></script>-->
 <!--<script src="scripts/js/bootstrap-4.0.0a3.min.js"></script>-->
